--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -6,31 +6,30 @@ cron "0 8 21-31 5-12 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk030
 cron "*/5 0 * * *" script-path=http://nm66.top/jd_cctx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=城城分现金自动提现
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg_help.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=星推官互助
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=家电星推官
-cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_jxhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东京喜阶梯红包
-cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_newInteraction.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=618大势新品赏
-cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_superbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东超级盒子
+cron "15 9 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_jxhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东京喜阶梯红包
+cron "15 9,20 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_newInteraction.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=618大势新品赏
+cron "15 9,20 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_superbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东超级盒子
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东领现金兑换10元红包
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/debao.js, img-url=https://qxzy.top/rules/QuantumultX/img/debao.png, enabled=true, tag=得宝小程序
 cron "13 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_zoo.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=动物联萌lxk
 cron "0 */1 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELONGCASH/elongcash.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELONGCASH/140.png, enabled=false, tag=同程小猪
 cron "0 0 0/4 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zb.js, img-url=https://qxzy.top/rules/QuantumultX/img/zuobian.png, enabled=true, tag=左边
-cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_superbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东超级盒子
 cron "5 * * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=动物联萌
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
 cron "2 0-18/6 * 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=⚠️京东手机狂欢城
 cron "0 0-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_city.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=城城领现金
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xsg.js, img-url=https://qxzy.top/rules/QuantumultX/img/xsg.png, enabled=true, tag=薪时光
 cron "1 0,11,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=跳跳乐瓜分京豆
-cron "20 9 21-27 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_mi.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东Redmi合成小金刚
+cron "20 9 21-27 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_mi.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东Redmi合成小金刚
 cron "0 */8 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/helpbang.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/140.png, enabled=true, tag=互利帮(需TF资格)
-cron "20 9 20-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_martin.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=人头马x博朗
+cron "20 9 20-31 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_martin.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=人头马x博朗
 cron "0 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴免费水果
-cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
+cron "15 9 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/jd_jr_sign.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东金融领豆（不共用京东ck另抓）
-cron "25 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
+cron "25 9 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
 cron "0 30 21 * * 2,4,7 " script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=双色球
 cron "0 */60 6-23 * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/kkj.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkj.png, enabled=true, tag=看看集自动阅读
-cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
+cron "15 8,13,18 17-31 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist备份
 cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist恢复
 cron "0 30 7,10 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=https://qxzy.top/rules/QuantumultX/img/gdbs.png, enabled=true, tag=咕咚步数红包
@@ -45,7 +44,7 @@ cron "11 11 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@
 cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/backup/adolf_ETIP.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️探秘无限星空
 cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ipxz.js, img-url=https://qxzy.top/rules/QuantumultX/img/ipxz.png, enabled=true, tag=ip小站
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/csxdr.js, img-url=https://ae01.alicdn.com/kf/Udd9cb36174cf41a7a69e28a643a360a9a.jpg, enabled=true, tag=超市小达人
-cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/backup/adolf_haier.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=海尔_欢乐大逃亡
+cron "15 8 7-31 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_haier.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=海尔_欢乐大逃亡
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fksl.js, img-url=https://ae01.alicdn.com/kf/U1d2f24494aa1460286360f8bb0e10210Y.jpg, enabled=true, tag=疯狂森林
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/scdcg.js, img-url= https://ae01.alicdn.com/kf/U9f2a16b203ed40318d22f9fd5fdce9a9S.jpg, enabled=true, tag=食材大冲关
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/qmlzc.js, img-url=https://qxzy.top/rules/QuantumultX/img/qmlzc.png, enabled=true, tag=全民来找茬
@@ -53,12 +52,12 @@ cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/panghu999/ning
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zsb.js, img-url=https://qxzy.top/rules/QuantumultX/img/zsb.png, enabled=true, tag=再生贝
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ttcj.js, img-url=https://qxzy.top/rules/QuantumultX/img/ttcj.png, enabled=true, tag=天天抽奖365
 cron "0 1 0/5 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/fcs.js, img-url=https://qxzy.top/rules/QuantumultX/img/fcs.png, enabled=true, tag=发财树
-cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=刺客567之寻宝
+cron "25 8,12 6-11 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_oppo.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=刺客567之寻宝
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/kkj.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkj.png, enabled=true, tag=看看集
 cron "13 1,22,23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_daily_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=每日抽奖
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xffd.js, img-url=https://qxzy.top/rules/QuantumultX/img/xffd.png, enabled=true, tag=幸福饭店
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://qxzy.top/rules/QuantumultX/img/ryhy.png, enabled=true, tag=如意花园
-cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shop_captain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=超级无线组队分奖品
+cron "25 3 * * 2" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_shop_captain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️超级无线组队分奖品
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
 cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴出行zZPiglet
