--- a/rule/qx.conf
+++ b/rule/qx.conf
@@ -46,7 +46,7 @@ static=节点选择, 香港节点, 日本节点, 美国节点, img-url=https://g
 url-latency-benchmark=香港节点, server-tag-regex=(?i)(港|HK|Hong), check-interval=600, tolerance=1000, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/HK.png
 url-latency-benchmark=日本节点, server-tag-regex=(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan), check-interval=600, tolerance=1000, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/JP.png
 url-latency-benchmark=美国节点, server-tag-regex=(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States), check-interval=600, tolerance=100, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/United_States.png
-url-latency-benchmark=免流上网, server-tag-regex=(?i)(港|直连), check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/China.png
+url-latency-benchmark=免流上网, server-tag-regex=(港.*直连|直连.*港), check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/China.png
 
 ssid=直连服务, 免流上网, direct, zhaoyou_office:direct, CMCC-PjgV-5G:direct,img-url=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/China_Map.png
 static=应用净化, reject, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/color/AdBlack.png
