--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -42,6 +42,7 @@ cron "3 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdr
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js, img-url=https://raw.githubusercontent.com/yogayyy/Scripts/master/Icon/shylocks/jd_ms.jpg, enabled=true, tag=京东秒秒币
 cron "10 0,20 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=点点券
 cron "35 1,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=女装盲盒
+cron "0 15-19/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_party_night.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=沸腾之夜
 cron "15 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdmc.png, enabled=true, tag=东东萌宠
 cron "12 0-23/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyz.png, enabled=true, tag=京东金融养猪猪
 cron "1 7-21/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdzd.png, enabled=true, tag=种豆得豆
