--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,8 +2,8 @@
 # 挂v更新https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_party_night.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=沸腾之夜
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xcsh.js, img-url=https://qxzy.top/rules/QuantumultX/img/xcsh.png, enabled=true, tag=湘创生活
-cron "*/5 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/zy_ccfxj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=城城分现金互助
 cron "0 8 21-31 5-12 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gold_creator.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=金榜创造营
 cron "*/5 0 * * *" script-path=http://nm66.top/jd_cctx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=城城分现金自动提现
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg_help.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=星推官互助
