--- a/rule/qx.conf
+++ b/rule/qx.conf
@@ -120,16 +120,15 @@ final, 漏网之鱼
 # 本地服务器（节点）
 [server_local]
 
-vmess=els.jklist.ml:80, method=aes-128-gcm, password=5cf2ecb0-9165-4760-8e8a-381ce547a6ef, obfs=ws, obfs-host=pull.free.video.10010.com, obfs-uri=/, fast-open=false, udp-relay=false, tag=俄罗斯-ws
 
 
 
 # 服务器引用（机场订阅）
 [server_remote]
 
-https://ghproxy.com/https://raw.githubusercontent.com/pxylen/dog_jd/master/utils/ml, tag=自用免流, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/x0.1.png, update-interval=86400, opt-parser=true, enabled=true
-https://ghproxy.com/https://raw.githubusercontent.com/pxylen/dog_jd/master/utils/ml2, tag=备用免流, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/x0.2.png, update-interval=86400, opt-parser=true, enabled=true
-https://api.ikuuu.science/link/wkm1lNEDijwK3M9j?sub=3&extend=1, tag=ikuuu, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/x0.3.png, update-interval=86400, opt-parser=true, enabled=true
+https://ghproxy.com/https://raw.githubusercontent.com/------------------, tag=自用免流, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/x0.1.png, update-interval=86400, opt-parser=true, enabled=true
+https://ghproxy.com/https://raw.githubusercontent.com/------------------, tag=备用免流, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/x0.2.png, update-interval=86400, opt-parser=true, enabled=true
+-------------------------------------------, tag=ikuuu, img-url=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/icon/qure/x0.3.png, update-interval=86400, opt-parser=true, enabled=true
 
 
 # 远程重写订阅
