--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,5 +1,5 @@
 # 奇心脚本合集
-# 挂v更新https://qxzy.top/rules/QuantumultX/qixin.json
+# 儿童节快乐！
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
 cron "0 12 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qjyy.js, img-url=https://qxzy.top/rules/QuantumultX/img/qjyy.png, enabled=true, tag=青椒音乐
