--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 12 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/superBrand.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物zx联想
 cron "30 9 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/babelDiy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=总裁送好礼
 cron "0 12 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qjyy.js, img-url=https://qxzy.top/rules/QuantumultX/img/qjyy.png, enabled=true, tag=青椒音乐
 cron "55,1 21-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_party_night.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=沸腾之夜
