--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,7 +1,8 @@
-# 奇心脚本合集
-# https://qxzy.top/rules/QuantumultX/qixin.json
-
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东浓情618与粽不同
+cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东新潮品牌狂欢
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_dphby.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东大牌闪购红包雨
+cron "1 0 * * * " script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_gcip.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东特物国创IP
 cron "0 12 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/superBrand.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物zx联想
 cron "30 9 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/babelDiy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=总裁送好礼
 cron "0 12 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qjyy.js, img-url=https://qxzy.top/rules/QuantumultX/img/qjyy.png, enabled=true, tag=青椒音乐
@@ -101,7 +102,7 @@ cron "25 8 * 4-5 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_t
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_market_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=幸运大转盘
 cron "5-45/20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health_collect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区收集能量
 cron "10 0-23/4 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区
-cron "2 9 * * *" script-path=https://raw.githubusercontent.com/jonrean/JD-SHELL/main/monk_pasture.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=有机牧场
+cron "2 9 * * *" script-path=https://raw.githubusercontent.com/jonrean/JD-SHELL/main/monk_pasture.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=有机牧场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, img-url=https://qxzy.top/rules/QuantumultX/img/xyl.png, enabled=true, tag=新亚链
 cron "0 13 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东排行榜
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东整点京豆红包雨
@@ -139,7 +140,7 @@ cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_carni
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读
 cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️城城分现金
-cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=⚠️女装盲盒
+cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_nzmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️女装盲盒
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️金口碑奖投票
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, img-url=https://qxzy.top/rules/QuantumultX/img/ygkc.png, enabled=true, tag=阳光矿场
 cron "12 12 24-26 3 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_sister.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️乘风破浪的姐姐
