--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,8 +1,11 @@
+# 奇心脚本合集
+# https://qxzy.top/rules/QuantumultX/qixin.json
+
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东浓情618与粽不同
-cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东新潮品牌狂欢
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_dphby.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东大牌闪购红包雨
-cron "1 0 * * * " script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_gcip.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东特物国创IP
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=浓情618与粽不同
+cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_dphby.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=大牌闪购红包雨
+cron "1 0 * * * " script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_gcip.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物国创IP
 cron "0 12 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/superBrand.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物zx联想
 cron "30 9 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/babelDiy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=总裁送好礼
 cron "0 12 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qjyy.js, img-url=https://qxzy.top/rules/QuantumultX/img/qjyy.png, enabled=true, tag=青椒音乐
