--- a/task/zhiyi.conf
+++ b/task/zhiyi.conf
@@ -1,3 +1,6 @@
+# Ease task
+# 你薅疼我了！
+
 cron " 5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, img-url=https://ae01.alicdn.com/kf/Uff0a0bb9e66a479591c9b02c176fd276A.jpg, enabled=true, tag=微客众智
 cron " 0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, img-url=https://raw.githubusercontent.com/KodoShinichi/Head/main/fqxs.png, enabled=true, tag=番茄小说
 cron " 0 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=false, tag=书旗
