--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东动物联萌修复火爆
+cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_member_olb.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/jay.png, enabled=true, tag=京东欧乐b
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东浓情618与粽不同
 cron "30 9,10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东新潮品牌狂欢
 cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_dphby.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东大牌闪购红包雨
@@ -33,7 +35,6 @@ cron "0,1,2 0 * * *" script-path=https://ghproxy.com/https://raw.githubuserconte
 cron "15 7,15 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/debao.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/moyushouji.png, enabled=true, tag=得宝小程序
 cron "13 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_zoo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东动物联萌0301版
 cron "0 */1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELONGCASH/elongcash.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELONGCASH/140.png, enabled=false, tag=同程小猪🐷
-cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东动物联萌618活动
 cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/gxrcw.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/gxrcw.png, enabled=true, tag=高校人才网招聘监控
 cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/sydwzp.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/sydw.png, enabled=true, tag=事业单位招聘监控
 cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东手机狂欢城0301版
