--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -1,3 +1,195 @@
+[General]
+bypass-system = true
+dns-server = system,119.29.29.29,114.114.114.114
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
+bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
+update-url = https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/ssr.conf
+
+[Rule]
+
+
+# 哗哩哗哩
+URL-REGEX,^https?:\/\/api\.bilibili\.com\/x\/v2\/dm\/ad,REJECT
+URL-REGEX,^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.comic\/flash,REJECT
+
+
+# 外国规则
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list,PROXY
+DOMAIN-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list,PROXY
+
+
+# 直连规则
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppStore/AppStore.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaTest/ChinaTest.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list,DIRECT
+
+
+# 个人规则
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,DIRECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_proxy.list,PROXY
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.list,REJECT
+
+
+# 广告拦截
+DOMAIN-SET,https://anti-ad.net/surge2.txt,REJECT
+DOMAIN-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
+RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
+
+
+#--其他规则
+DOMAIN-KEYWORD,apple,DIRECT
+
+GEOIP,CN,DIRECT
+FINAL,PROXY
+
+
+[URL Rewrite]
+
+https?://(www.)?g.cn https://www.google.com 302
+https?://(www.)?google.cn https://www.google.com 302
+
+#YouTube去广告
+(^https?:\/\/[\w-]+\.googlevideo\.com\/.+)(ctier=L)(&.+) $1$3 302
+^https?:\/\/[\w-]+\.googlevideo\.com\/.+&(oad|ctier) - reject
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
+^https?:\/\/\s.youtube.com/api/stats/qoe?.*adformat= - reject
+
+
+#tiktokv
+(?<=_region=)CN(?=&) US 307
+(?<=&mcc_mnc=)4 2 307
+^(https?:\/\/tnc[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
+^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
+(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
+
+
+# 向日葵去广告
+^https?+:\/\/slapi\.oray\.net\/adver - reject-dict
+^https?+:\/\/slapi\.oray\.net\/adver\/promotion - reject-dict
+
+
+# 云闪付
+^https?+:\/\/(analytics|tysdk|ads)\.95516\.com - reject-dict
+
+
+# 12306
+^https?+:\/\/mobile\.12306\.cn\/otsmobile\/app\/mas\/loggw\/(logUpload.do|logConfig.do) - reject
+
+
+# 淘宝
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alibaba\.advertisementservice\.getadv - reject-200
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alimusic\.common\.mobileservice\.startinit\/ - reject
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopadvertiseapi\.queryadvertise\/ - reject
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.exposure\.get\/ - reject
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.gateway\.get\/ - reject
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.idle\.home\.welcome\/ - reject
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ - reject
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.wireless\.home\.splash\.awesome\.get\/ - reject
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.tmall\.wireless - reject-200
+
+# 京东
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/(aladdin\/na\/m\/getLoadingPicture|aladdin\/na\/m\/getLoadingPicture) - reject
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture - reject
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/base\/na\/m\/adInfo - reject
+
+
+# 哗哩哗哩
+# 去除动态中的话题
+^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr c reject-dict
+# 去除动态中的最常访问
+^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/mix_uplist - reject-dict
+# 其他去广告
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/Flash - reject-dict
+^https?:\/\/ap(i|p)\.bilibili\.com\/((x\/v2|pgc)\/(search\/defaultword|season\/rank\/cn)|(pgc/season/rank/cn|x/v2/(search/(defaultword|hot|recommend|resource)))) url reject-dict
+^https?:\/\/api\.bilibili\.com\/x\/v2\/dm\/ad - reject-dict
+^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.comic\/flash - reject-dict
+
+
+# 爱思助手
+^https?+:\/\/list-app-m\.i4\.cn\/getopfstadinfo.xhtml - reject-dict
+
+^https?:\/\/\w+\.gdt\.qq\.com - reject
+
+
+[Host]
+*testflight.apple.com = server:8.8.4.4
+*.qq.com = server:119.28.28.28
+*.tencent.com = server:119.28.28.28
+*.weixin.com = server:119.28.28.28
+*.bilibili.com = server:119.29.29.29
+*.163.com = server:119.29.29.29
+*.126.com = server:119.29.29.29
+*.126.net = server:119.29.29.29
+*.127.net = server:119.29.29.29
+*.netease.com = server:119.29.29.29
+*.mi.com = server:119.29.29.29
+*.xiaomi.com = server:119.29.29.29
+*.pcbeta.com = 120.52.19.113
+mtalk.google.com = 108.177.125.188
+dl.google.com = server:119.29.29.29
+dl.l.google.com = server:119.29.29.29
+
+[MITM]
+enable = true
+hostname = *.googlevideo.com,www.youtube.com,s.youtube.com,api.m.jd.com,trade-acs.m.taobao.com,acs.m.taobao.com,acs.m.taobao.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,slapi.oray.net,analytics.95516.com,tysdk.95516.com,ads.95516.com,mobile.12306.cn,list-app-m.i4.cn,testflight.apple.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,mi.gdt.qq.com,w.gdt.qq.com,buy.itunes.apple.com,account.wps.cn,*.amemv.com,
+skip-server-cert-verify = true
+ca-p12 =
+ca-passphrase =
+
+
+[Script]
+
+
+# ------------------------------------------------------------------去广告脚本--------------------------------------------------------------------
+
+# B站精简
+BiliBili_推荐去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_追番去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_直播去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_动态去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_new\?,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_开屏去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_标签页处理 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+BiliBili_我的页面处理 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/bilibili/bilibili_plus.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
+
+# 京东开屏广告
+京东_开屏去广告 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.js,pattern=^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+京东比价 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
+
+#-淘宝比价 (trade-acs.m.taobao.com)
+淘宝比价 = type=http-request,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,pattern=^http://.+/amdc/mobileDispatch,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+淘宝比价 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
+
+# picsew专业版
+picsew专业版 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/picsew.js,pattern=https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
+#WPS解锁  超级会员、wps会员、稻壳会员 (By eHpo)
+WPS解锁会员 = type=http-response,script-path=https://ghproxy.com/https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js,pattern=^https://account.wps.*/api/users/,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
+抖音去广告&水印req = type=http-request,pattern=^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/,script-path=https://ghproxy.com/https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js,timeout=600,script-update-interval=43200,enable=true
+抖音去广告&水印res = type=http-response,pattern=^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/,requires-body=true,max-size=524288,script-path=https://ghproxy.com/https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js,timeout=600,script-update-interval=43200,enable=true
+
+BoxJs = type=http-request,script-path=https://ghproxy.com/https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js,pattern=^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+
+
+# ------------------------------------------------------------------京东脚本--------------------------------------------------------------------
+
+# 获取多账号京东Cookie
+获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
+
 京东动物联萌修复火爆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js,cronexpr="5 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东欧乐b = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_member_olb.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
