--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -3,7 +3,7 @@ bypass-system = true
 dns-server = system,119.29.29.29,114.114.114.114
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-update-url = https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/task/shadowRocket.conf
+update-url = https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/master/rule/ssr.conf
 
 [Rule]
 
@@ -141,7 +141,7 @@ dl.l.google.com = server:119.29.29.29
 
 [MITM]
 enable = true
-hostname = *.googlevideo.com,www.youtube.com,s.youtube.com,api.m.jd.com,trade-acs.m.taobao.com,acs.m.taobao.com,acs.m.taobao.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,slapi.oray.net,analytics.95516.com,tysdk.95516.com,ads.95516.com,mobile.12306.cn,list-app-m.i4.cn,testflight.apple.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,mi.gdt.qq.com,w.gdt.qq.com,buy.itunes.apple.com,account.wps.cn,*.amemv.com,
+hostname = *.googlevideo.com,www.youtube.com,s.youtube.com,api.m.jd.com,me-api.jd.com,trade-acs.m.taobao.com,acs.m.taobao.com,acs.m.taobao.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,slapi.oray.net,analytics.95516.com,tysdk.95516.com,ads.95516.com,mobile.12306.cn,list-app-m.i4.cn,testflight.apple.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,mi.gdt.qq.com,w.gdt.qq.com,buy.itunes.apple.com,account.wps.cn,*.amemv.com,
 skip-server-cert-verify = true
 ca-p12 =
 ca-passphrase =
